2000-06-06  Ramiro Estrugo  <ramiro@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c: (get_user_level):
	Use "/apps/nautilus" instead of "/nautilus" to conform to the
	gconf "standard"

	Thanks to andersca@gnu.org for pointing this out.

2000-06-06  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	Require only "gconf" not "gconf-gtk"
	
2000-06-06  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-mime-info.h,
	libgnomevfs/gnome-vfs-mime-info.c
	(gnome_vfs_mime_info_reload): New call to force reloading of the
	MIME database.
	(maybe_reload): Use gnome_vfs_mime_info_reload if we decide to
	reload.

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_short_list_applications),
	(gnome_vfs_mime_set_default_action_type),
	(gnome_vfs_mime_set_default_application),
	(gnome_vfs_mime_set_default_component),
	(gnome_vfs_mime_set_short_list_applications),
	(gnome_vfs_mime_set_short_list_components),
	(gnome_vfs_mime_extend_all_applications),
	(gnome_vfs_mime_remove_from_all_applications),
	(gnome_vfs_mime_define_application): call
	gnome_vfs_mime_info_reload when done reloading.
	(gnome_vfs_mime_set_short_list_applications): Rewritten for
	correct memory management and improved clarity.
	
2000-06-06  John Sullivan  <sullivan@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_remove_component_from_short_list):
	Fixed an application -> component typo.

2000-06-06  Pavel  <pavel@eazel.com>

	* libgnomevfs-corba/gnome-vfs-slave.c: (copy_metadata):
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_all_applications):
	* libgnomevfs/gnome-vfs-module-shared.c:
	* modules/extfs-method.c: (do_open_directory):
	Renumber some FIXMEs after marking them as duplicates.
	Fix a wrong FIXME number.

2000-06-06  Pavel  <pavel@eazel.com>

	* devel-docs/gnome-vfs-tutorial/gnome-vfs-tutorial.sgml:
	* doc/writing-modules.sgml:
	* modules/extfs-method.c: (do_open):
	Added more bug numbers to FIXMEs.